Bug 413777 - Correct focus events absent when tabbing among links at sourceforge.net, patch=aaronlev, r=ginn.chen, a=mtschrep